--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "storybook": "^6.5.13",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
