--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
         "files": [
           "**/*.stories.*"
         ],
-
         "rules": {
           "import/no-anonymous-default-export": "off"
         }
@@ -52,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@mdx-js/react": "^1.6.22",
     "@storybook/addon-actions": "^6.5.13",
     "@storybook/addon-essentials": "^6.5.13",
     "@storybook/addon-interactions": "^6.5.13",
